Resize bg image

--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -40,6 +40,7 @@
         background-image: url('../assets/profile.jpg');
         width: 50%;
         height: 100vh;
+        background-size: cover;
     }
 }
 
