--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -6,6 +6,14 @@
     box-sizing: border-box;
 }
 
+.loading {
+    background-color: #060f36;
+    display: flex;
+    justify-content: center;
+    height: 100vh;
+    align-items: center;
+}
+
 .main {
     display: flex;
     width: 100vw;
