Formato de links

--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -6,6 +6,11 @@
     box-sizing: border-box;
 }
 
+a {
+    color: white;
+    text-decoration: none;
+}
+
 .main {
     display: flex;
     width: 100vw;
