--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -20,9 +20,20 @@
     }
 }
 
+.language {
+    font-size: 1.5rem;
+    color: #1ab6b9;
+    margin-top: 1rem;
+    display: none;
+}
+
 @media only screen and (max-width: 640px) {
     .menu {
         width: 100%;
         height: 100vh;
+    }
+
+    .language {
+        display: block;
     }
 }
