--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -1,6 +1,14 @@
 .content {
     display: flex;
     justify-content: center;
-    align-items: center;
-    padding: 2rem;
+    padding: 3rem;
+    flex-direction: column;
+}
+
+@media (max-device-width: 768px) {
+    .content {
+        position: absolute;
+        z-index: 100;
+        height: 100vh;
+    }
 }
