Correccion de formato de links en color para que no afecte a todos los links

--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -18,6 +18,10 @@
         font-size: 3rem;
         list-style: none;
         padding: 0;
+
+        a {
+            color: white;
+        }
     }
 }
 
