--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -1,3 +1,5 @@
+@import './variables';
+
 p {
     margin-top: 1rem;
 }
@@ -8,4 +10,8 @@ p {
 
 .content {
     background-color: white;
+}
+
+a {
+    color: $firstColor;
 }
