--- a/src/styles/Index.scss
+++ b/src/styles/Index.scss
@@ -6,9 +6,6 @@
 
 @media only screen and (max-width: 640px) {
     .picture {
-        width: 100%;
-        height: 50vh;
-        background-position: center;
-        background-size: cover;
+        display: none;
     }
 }
