--- a/src/styles/_knowledge-cards.scss
+++ b/src/styles/_knowledge-cards.scss
@@ -1,4 +1,15 @@
+@import './variables';
+
 .icon {
-    width: 3rem;
+    width: 6rem;
+    height: 6rem;
+    padding: 0.5rem;
     margin-right: 1rem;
+    margin-top: 1rem;
+    background-color: $firstColor;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1rem;
 }
