--- a/src/styles/_knowledge-cards.scss
+++ b/src/styles/_knowledge-cards.scss
@@ -1,10 +1,14 @@
 @import './variables';
 
+.card {
+    text-align: center;
+    margin: 1rem;
+}
+
 .icon {
     width: 6rem;
     height: 6rem;
     padding: 0.5rem;
-    margin-right: 1rem;
     margin-top: 1rem;
     background-color: $firstColor;
     color: white;
@@ -12,4 +16,15 @@
     align-items: center;
     justify-content: center;
     font-size: 1rem;
+}
+
+.alt-text-resp {
+    margin-top: 0.5rem;
+    display: none;
+}
+
+@media (max-device-width: 768px) {
+    .alt-text-resp {
+        display: block;
+    }
 }
