Correccion de height en menu

--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -8,7 +8,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 0 10%;
-    height: 100vh;
+    height: 100;
 
     h1 {
         font-size: 3rem;
