--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -3,6 +3,7 @@
     justify-content: center;
     padding: 3rem;
     flex-direction: column;
+    width: 50%;
 
     .close {
         text-align: right;
@@ -14,6 +15,7 @@
     .content {
         position: absolute;
         z-index: 100;
+        width: 100%;
 
         .close {
             display: block;
