--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -8,7 +8,9 @@
     flex-direction: column;
     justify-content: center;
     padding: 0 10%;
-    height: 100;
+    height: 100vh;
+    position: sticky;
+    top: 0;
 
     h1 {
         font-size: 3rem;
