--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -8,13 +8,13 @@ p {
     margin-bottom: 2rem;
 }
 
-.content {
+.content.about {
     background-color: white;
     color: $firstColor;
-}
 
-a {
-    color: $firstColor;
+    a {
+        color: $firstColor;
+    }
 }
 
 .picture-about {
