--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -7,4 +7,37 @@
     a {
         color: $secondColor;
     }
+
+    form {
+        margin-top: 1rem;
+
+        .form-group {
+            display: flex;
+            flex-direction: column;
+            margin-top: 1rem;
+
+            input {
+                min-width: 50%;
+                border: none;
+                padding: 0.5rem;
+                margin-top: 0.5rem;
+            }
+
+            textarea {
+                resize: none;
+                margin-top: 0.5rem;
+                height: 5rem;
+            }
+
+            button {
+                border: none;
+                background-color: $secondColor;
+                padding: 0.75rem;
+
+                &:hover {
+                    background-color: white;
+                }
+            }
+        }
+    }
 }
