Estilos del mensaje de gracias#

--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -8,6 +8,10 @@
         color: $secondColor;
     }
 
+    .thanks {
+        margin-bottom: 1rem;
+    }
+
     form {
         margin-top: 1rem;
 
