--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -12,25 +12,20 @@
         margin-bottom: 1rem;
     }
 
+    .error {
+        color: $secondColor;
+        margin-top: 0.5rem;
+    }
+
     form {
         margin-top: 1rem;
 
         .form-group {
-            display: flex;
-            flex-direction: column;
-            margin-top: 1rem;
-
-            input {
-                min-width: 50%;
-                border: none;
-                padding: 0.5rem;
-                margin-top: 0.5rem;
-            }
-
             textarea {
                 resize: none;
                 margin-top: 0.5rem;
                 height: 5rem;
+                padding: 0.5rem;
             }
 
             button {
