Cambios en width de 50% a 50vw

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -11,6 +11,7 @@ p {
 .content.about {
     background-color: white;
     color: $firstColor;
+    width: 50vw;
 
     a {
         color: $firstColor;
