--- a/src/styles/_menu.scss
+++ b/src/styles/_menu.scss
@@ -3,7 +3,7 @@
 .menu {
     background-color: $firstColor;
     color: white;
-    width: 50%;
+    width: 50vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
