Cambios en width de 50% a 50vw

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -25,6 +25,10 @@ p {
 }
 
 @media (max-device-width: 768px) {
+    .content.about {
+        width: 100%;
+    }
+
     .picture-about {
         display: block;
     }
