--- a/src/styles/_works-cards.scss
+++ b/src/styles/_works-cards.scss
@@ -21,11 +21,17 @@
         height: 100%;
         padding: 1rem;
         display: none;
+        align-items: center;
+        justify-content: center;
 
         &.active {
             display: flex;
-            align-items: center;
-            justify-content: center;
         }
+    }
+}
+
+@media (max-device-width: 768px) {
+    .work-card .work-card-info {
+        display: flex;
     }
 }
