--- a/src/styles/Main.scss
+++ b/src/styles/Main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap');
 
 * {
     margin: 0;
@@ -14,6 +14,10 @@ a {
 .main {
     display: flex;
     width: 100%;
+}
+
+.eng > * {
+    font-style: italic;
 }
 
 @media only screen and (max-width: 640px) {
