Color de content implementado en estilos de content, no en cada archivo

--- a/src/styles/_content.scss
+++ b/src/styles/_content.scss
@@ -1,9 +1,16 @@
+@import './variables';
+
 .content {
     display: flex;
     justify-content: center;
     padding: 3rem;
     flex-direction: column;
     width: 50%;
+    color: $firstColor;
+
+    a {
+        color: $firstColor;
+    }
 
     .close {
         text-align: right;
