--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -20,7 +20,7 @@ p {
     display: none;
 }
 
-@media (max-device-width: 768px) {
+@media (max-device-width: $responsive) {
     .content.about {
         width: 100%;
     }
