--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -46,7 +46,7 @@
     margin: 1rem 0;
 }
 
-@media (max-device-width: 768px) {
+@media (max-device-width: $responsive) {
     .content.contact {
         width: 100%;
     }
