--- a/src/styles/_works-cards.scss
+++ b/src/styles/_works-cards.scss
@@ -30,7 +30,7 @@
     }
 }
 
-@media (max-device-width: 768px) {
+@media (max-device-width: $responsive) {
     .work-card .work-card-info {
         display: flex;
     }
