--- a/src/styles/_works.scss
+++ b/src/styles/_works.scss
@@ -11,7 +11,7 @@
     flex-wrap: wrap;
 }
 
-@media (max-device-width: 768px) {
+@media (max-device-width: $responsive) {
     .content.works {
         width: 100%;
     }
