Creacion de mixin que usa flex wrap. Implementacion

--- a/src/styles/_knowledge.scss
+++ b/src/styles/_knowledge.scss
@@ -1,10 +1,11 @@
+@import './mixins';
+
 .knowledge {
     h3 {
         margin-top: 1rem;
     }
 
     .icons {
-        display: flex;
-        flex-wrap: wrap;
+        @include wrap;
     }
 }
