--- a/src/styles/_works.scss
+++ b/src/styles/_works.scss
@@ -1,4 +1,5 @@
 @import './variables';
+@import './mixins';
 
 .content.works {
     background-color: #39cacc;
@@ -7,8 +8,7 @@
 
 .works-cards {
     margin-top: 2rem;
-    display: flex;
-    flex-wrap: wrap;
+    @include wrap;
 }
 
 @media (max-device-width: $responsive) {
