--- a/src/styles/_contact.scss
+++ b/src/styles/_contact.scss
@@ -1,4 +1,5 @@
 @import './variables';
+@import './mixins';
 
 .content.contact {
     background-color: $thirdColor;
@@ -9,18 +10,12 @@
         color: $secondColor;
     }
 
-    .thanks {
-        margin-bottom: 1rem;
-    }
-
     .error {
         color: $secondColor;
         margin-top: 0.5rem;
     }
 
     form {
-        margin-top: 1rem;
-
         .form-group {
             textarea {
                 resize: none;
@@ -30,9 +25,7 @@
             }
 
             button {
-                border: none;
-                background-color: $secondColor;
-                padding: 0.75rem;
+                @include button;
 
                 &:hover {
                     background-color: white;
