--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -2,3 +2,9 @@
     display: flex;
     flex-wrap: wrap;
 }
+
+@mixin button {
+    border: none;
+    background-color: $secondColor;
+    padding: 0.75rem;
+}
