--- a/src/styles/_works-info.scss
+++ b/src/styles/_works-info.scss
@@ -14,9 +14,19 @@
     @include wrap;
 }
 
+.buttons {
+    display: flex;
+}
+
 .button {
     @include button;
     width: 10rem;
     text-align: center;
     margin-bottom: 1rem;
+
+    &.back {
+        background: none;
+        border: 1px solid $firstColor;
+        margin-left: 0.5rem;
+    }
 }
